# doctestcase

./: .copier-answers.yml  .gitignore  .gitmodules  CHANGELOG.md  Justfile  Makefile  README.md  compose.yml  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  SECURITY.md
.just/: changelog.just  version.just
NEWS.d/: 20250214_001617_makukha_3_add_get_title_and_get_body.md  20250214_001824_makukha_3_add_get_title_and_get_body.md  20250214_080839_makukha_3_add_get_title_and_get_body.md  20250214_200318_makukha_7_documentation_error_unittestskip_on_base_class_skips_all_children_as_well.md  20250303_093408_makukha_11_optionally_ignore_title_on_formatting.md  20250303_124307_makukha_13_sync_with_project_template.md  20250303_164055_makukha_17_fix_project_template_bugs.md  20250403_142107_m.makukha_23_allow_mocking_doctests.md
docs/: alternatives.md  api.rst  badges.md  conf.py  desc.md  features.md  index.rst  installation.rst  requirements.txt  title.md  usage.md
docs/openssf/: bestpractices.md
docs/sphinx/: conf.py  index.rst  requirements.txt
src/doctestcase/: __init__.py  case.py  case.pyi  format.py  format.pyi
tests/: __init__.py  requirements.txt  test_cases.py  test_docsub.py  test_fails.py  test_format.py  test_globs.py  test_nodoc.py  test_opts.py  test_reuse.py  test_trivial.py  test_usage.py  usage_direct2.txt  usage_param1.txt  usage_param2.txt  usage_param4.txt  util.py
tests/docsub/: __input__.md  __result__.md  docsubfile.py
tests/usage/: direct1.txt  direct2.txt  inherit.py  inherit.pyi  mock.py  mock.pyi  param-base.py  param2.txt  param3.txt  param4.txt  param_base.pyi  param_child.pyi  reuse.pyi  simple.py  simple.pyi
