[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctestcase"
description = """\
  Decorate `unittest.TestCase` to evaluate doctests with configurable globals \
  and `setUp`/`tearDown`. Export to Markdown and reST to include in docs.\
"""
license = {text = "MIT"}
readme = "README.md"
urls.Documentation = "https://doctestcase.readthedocs.io"
urls.Homepage = "https://github.com/makukha/doctestcase"
urls.Repository = "https://github.com/makukha/doctestcase"
urls.Issues = "https://github.com/makukha/doctestcase/issues"
urls.Changelog = "https://github.com/makukha/doctestcase/releases"
keywords = ["unittest", "doctest", "test-case", "markdown", "rst", "restructuredtext"]
classifiers = [
  # see https://pypi.org/classifiers/
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Documentation",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dynamic = ["version"]

requires-python = ">=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4"
dependencies = []

[dependency-groups]
dev = [
  "bump-my-version ; python_version >= '3.12'",
  "docsub>=0.8.3 ; python_version >= '3.12'",
  "genbadge[tests,coverage]>=1.1 ; python_version >= '3.12'",
  "mypy ; python_version >= '3.12'",
  "pytest>=8.3 ; python_version >= '3.12'",
  "ruff ; python_version >= '3.12'",
  "towncrier ; python_version >= '3.12'",
]
docs = [
  "furo ; python_version >= '3.12'",
  "myst-parser ; python_version >= '3.12'",
  "sphinx ; python_version >= '3.12'",
  "sphinx-copybutton>=0.3 ; python_version >= '3.12'",
  "sphinx-design ; python_version >= '3.12'",
  "sphinx-sitemap ; python_version >= '3.12'",
]

# bump-my-version

[tool.bumpversion]
current_version = "0.0.0"
allow_dirty = true
files = [
  {filename = "docs/badges.md"},
  {filename = "docs/conf.py"},
  {filename = "src/doctestcase/__init__.py"},
]

# hatch

[tool.hatch.build]
exclude = [
  "Justfile",
  "Makefile",
  "compose.yml",
]
[tool.hatch.version]
path = "src/doctestcase/__init__.py"

# mypy

[tool.mypy]
python_version = "3.9"
strict = true
exclude = "tests/usage"
[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

# ruff

[tool.ruff]
exclude = ["tests/usage"]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "S"]
per-file-ignores."tests/**/*.py" = [
  "S101",  # Use of `assert` detected
  "S102",  # Use of `exec` detected
  "S603",  # `subprocess` call: check for execution of untrusted input
]
[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# towncrier

[tool.towncrier]
directory = "NEWS.d"
filename = "CHANGELOG.md"
title_format = "## [v{version}](https://github.com/makukha/doctestcase/releases/tag/v{version}) — {project_date}"
issue_format = "[#{issue}](https://github.com/makukha/doctestcase/issues/{issue})"
type = [
  {name = "Security ⚠️", directory = "security", showcontent = true},
  {name = "Breaking 🔥", directory = "breaking", showcontent = true},
  {name = "Removed 💨", directory = "removed", showcontent = true},
  {name = "Deprecated ❄️", directory = "deprecated", showcontent = true},
  {name = "Added 🌿", directory = "added", showcontent = true},
  {name = "Changed", directory = "changed", showcontent = true},
  {name = "Fixed", directory = "fixed", showcontent = true},
  {name = "Docs", directory = "docs", showcontent = true},
  {name = "Misc", directory = "misc", showcontent = true},
]
